--- a/index.html
+++ b/index.html
@@ -3,123 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carta Tilo Café</title>
+  <title>Tilo Café - Carta Digital</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background: #faf7f5;
-      color: #45270a;
-    }
-    header {
-      background: #fff;
-      text-align: center;
-      padding: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    header img {
-      width: 100%;
-      max-height: 250px;
-      object-fit: cover;
-    }
-    .banner {
-      text-align: center;
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin: 15px;
-    }
-    /* Buscador */
-    .search-box {
-      text-align: center;
-      margin: 15px;
-    }
-    .search-box input {
-      width: 90%;
-      max-width: 400px;
-      padding: 10px;
-      border: 2px solid #8c6954;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-    /* Categorías */
-    nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      padding: 15px;
-    }
+    body { font-family: "Arial", sans-serif; background:#f7f3f0; margin:0; padding:0; color:#333; }
+    header { text-align:center; padding:20px; background:#806250; color:white; }
+    nav { display:flex; flex-wrap:wrap; justify-content:center; background:#e5d4c0; padding:10px; gap:8px; }
     nav button {
-      background: #8c6954;
-      color: #fff;
-      border: none;
-      border-radius: 12px;
-      padding: 15px 20px;
-      font-size: 1rem;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      transition: background 0.3s, transform 0.2s;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+      background:#806250; color:white; border:none; border-radius:8px;
+      padding:10px 14px; font-size:16px; display:flex; align-items:center; gap:6px;
+      cursor:pointer; transition:transform 0.2s; flex:1 1 auto; min-width:120px;
     }
-    nav button:hover {
-      background: #6b4e3d;
-      transform: translateY(-3px);
+    nav button:hover { transform:scale(1.05); background:#5f4536; }
+    .icon { font-size:18px; }
+    #search { width:90%; margin:15px auto; display:block; padding:10px;
+      border:2px solid #806250; border-radius:8px; font-size:16px; }
+    main { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr));
+      gap:20px; padding:20px; max-width:1200px; margin:auto; }
+    .card {
+      background:white; border-radius:12px; padding:15px; box-shadow:0 2px 5px rgba(0,0,0,0.1);
+      transition:transform 0.2s;
     }
-    .icon {
-      font-size: 1.5rem;
-    }
-    /* Productos */
-    .item-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      padding: 20px;
-    }
-    .item {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-      overflow: hidden;
-      width: 280px;
-      transition: transform 0.2s ease;
-    }
-    .item:hover { transform: scale(1.02); }
-    .item img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-    .item h3 { margin: 10px; }
-    .item p { margin: 0 10px 10px; }
-    .item .price {
-      font-weight: bold;
-      color: #000;
-      margin: 0 10px 10px;
-      display: block;
-    }
+    .card:hover { transform:scale(1.02); }
+    .card img { width:100%; border-radius:12px; }
+    .card h3 { margin:10px 0 5px; color:#806250; }
+    .card p { margin:5px 0; font-size:14px; }
+    .price { font-weight:bold; color:#5f4536; font-size:16px; }
   </style>
 </head>
 <body>
-  <!-- Logo -->
   <header>
-    <img src="img/french99.jpg" alt="Tilo Café" />
+    <h1>☕ Carta Digital - Tilo Café</h1>
   </header>
 
-  <div class="banner">¡Bienvenidos a Tilo Café Agüero 2298!</div>
-
-  <!-- Buscador -->
-  <div class="search-box">
-    <input type="text" id="searchInput" placeholder="🔍 Buscar producto o categoría...">
-  </div>
-
-  <!-- Botones de categorías -->
   <nav>
     <button onclick="renderProducts('TODOS')"><span class="icon">📋</span>Todos</button>
     <button onclick="renderProducts('CAFETERÍA')"><span class="icon">☕</span>Cafetería</button>
-    <button onclick="renderProducts('PICADAS')"><span class="icon">🥟</span>Picadas (Entradas)</button>
+    <button onclick="renderProducts('PICADAS')"><span class="icon">🥟</span>Entradas</button>
     <button onclick="renderProducts('COMIDAS')"><span class="icon">🍽️</span>Comidas</button>
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
     <button onclick="renderProducts('REFRESCOS Y VINOS')"><span class="icon">🥤🍷</span>Refrescos y Vinos</button>
@@ -127,66 +46,55 @@
     <button onclick="renderProducts('EVENTOS Y NOVEDADES')"><span class="icon">⭐</span>Eventos y Novedades</button>
   </nav>
 
-  <!-- Lista de productos -->
-  <div class="item-list" id="product-list"></div>
+  <input id="search" type="text" placeholder="🔍 Buscar productos...">
+
+  <main id="productos"></main>
 
   <script>
+    const FILE_URL = "https://frenchtilo-boop.github.io/cartatilo/productos.json";
     let productos = [];
 
-    // Cargar productos
-    fetch('productos.json')
-      .then(response => response.json())
-      .then(data => {
-        productos = data;
-        renderProducts('TODOS');
-      });
+    async function loadProducts() {
+      const res = await fetch(FILE_URL);
+      productos = await res.json();
+      renderProducts("TODOS");
+    }
 
-    // Renderizar productos por categoría
     function renderProducts(categoria) {
-      const container = document.getElementById('product-list');
-      container.innerHTML = '';
-      const filtrados = categoria === 'TODOS' ? productos : productos.filter(p => p.categoria === categoria);
+      const cont = document.getElementById("productos");
+      cont.innerHTML = "";
+
+      let filtrados = categoria === "TODOS"
+        ? productos
+        : productos.filter(p => p.categoria === categoria);
+
+      const term = document.getElementById("search").value.toLowerCase();
+      if (term) {
+        filtrados = filtrados.filter(p =>
+          p.nombre.toLowerCase().includes(term) ||
+          p.descripcion.toLowerCase().includes(term) ||
+          p.categoria.toLowerCase().includes(term)
+        );
+      }
+
+      if (filtrados.length === 0) {
+        cont.innerHTML = "<p style='text-align:center;'>No se encontraron productos.</p>";
+        return;
+      }
+
       filtrados.forEach(p => {
-        const item = document.createElement('div');
-        item.className = 'item';
-        const priceDisplay = (String(p.precio||'').trim().startsWith('$'))
-          ? String(p.precio).trim()
-          : ('$' + (p.precio ?? ''));
-        item.innerHTML = `
-          <img src="${p.imagen}" alt="${p.nombre}">
-          <h3>${p.nombre}</h3>
-          <p>${p.descripcion}</p>
-          <span class="price">${priceDisplay}</span>
-        `;
-        container.appendChild(item);
+        cont.innerHTML += `
+          <div class="card">
+            <img src="${p.imagen}" alt="${p.nombre}">
+            <h3>${p.nombre}</h3>
+            <p>${p.descripcion}</p>
+            <p class="price">$${p.precio}</p>
+          </div>`;
       });
     }
 
-    // Buscador general (nombre, descripción o categoría)
-    document.getElementById('searchInput').addEventListener('input', function() {
-      const term = this.value.toLowerCase();
-      const filtrados = productos.filter(p => 
-        p.nombre.toLowerCase().includes(term) || 
-        p.descripcion.toLowerCase().includes(term) ||
-        p.categoria.toLowerCase().includes(term)
-      );
-      const container = document.getElementById('product-list');
-      container.innerHTML = '';
-      filtrados.forEach(p => {
-        const item = document.createElement('div');
-        item.className = 'item';
-        const priceDisplay = (String(p.precio||'').trim().startsWith('$'))
-          ? String(p.precio).trim()
-          : ('$' + (p.precio ?? ''));
-        item.innerHTML = `
-          <img src="${p.imagen}" alt="${p.nombre}">
-          <h3>${p.nombre}</h3>
-          <p>${p.descripcion}</p>
-          <span class="price">${priceDisplay}</span>
-        `;
-        container.appendChild(item);
-      });
-    });
+    document.getElementById("search").addEventListener("input", () => renderProducts("TODOS"));
+    loadProducts();
   </script>
 </body>
 </html>
